--- a/templates/index2.html
+++ b/templates/index2.html
@@ -29,7 +29,7 @@
       <div class="col">
         <div class="card" style="width: 18rem;">
           <a href="/random">
-          <img src="img/random.jpg" class="card-img-top">
+          <img src="http://127.0.0.1:5000/templates/img/random.jpg" class="card-img-top">
           <div class="card-body">
             <p class="card-text">
               <h4>RANDOM</h4>
