--- a/templates/index2.html
+++ b/templates/index2.html
@@ -7,8 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/static/style.css">
     <title>COOKBOOK</title>
+
+    
   </head>
   <body>
     <div class="container">
@@ -29,7 +31,7 @@
       <div class="col">
         <div class="card" style="width: 18rem;">
           <a href="/random">
-          <img src="http://127.0.0.1:5000/templates/img/random.jpg" class="card-img-top">
+          <img src="/static/img/random.jpg" class="card-img-top">
           <div class="card-body">
             <p class="card-text">
               <h4>RANDOM</h4>
@@ -43,7 +45,7 @@
       <div class="col">
         <div class="card" style="width: 18rem;">
           <a href="/category/all">
-          <img src="img\category.jpg" class="card-img-top" alt="/random">
+          <img src="/static/img/category.jpg" class="card-img-top">
           <div class="card-body">
             <p class="card-text">
               <h4>CATEGORY</h4>
@@ -55,7 +57,7 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="img\ingredient.jpg" class="card-img-top" alt="...">
+          <img src="/static/img/ingredient.jpg" class="card-img-top">
           <div class="card-body">
             <p class="card-text">
               <h4>INGRENDIENT</h4>
