--- a/templates/recepie.html
+++ b/templates/recepie.html
@@ -6,12 +6,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    
+    <link rel="stylesheet" href="/static/style.css">
     <title>COOKBOOK</title>
   </head>
   <body>
-
-    
       <div class="card mb-3" >
         <div class="row g-0">
           <div class="col-md-4">
@@ -20,32 +19,53 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">{{recepie['meals'][0]['strMeal']}}</h5>
-              <p class="card-text">
-                {{recepie['meals'][0]['strInstructions']}}
-
-              </p>
+              
               <p class="card-text">
                   <small class="text-muted">
                     <h4>Category</h4>
                     {{recepie['meals'][0]['strCategory']}}
                 </small></p>
+                
                 <p class="card-text">
                     <small class="text-muted">
                       <h4>Area</h4>
-                      {{recepie['meals'][0]['strCategory']}}
+                      {{recepie['meals'][0]['strArea']}}
                   </small></p>
+                  
                   <p class="card-text">
                     <small class="text-muted">
-                      <h4>Ingredients</h4>
-                      {{ingredients}}
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">Ingredient</th>
+                            <th scope="col">Quantity</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          {% for i in ingredients %} 
+                          <tr>
+                            <th scope="row">{{ i }}</th>
+                            <td>{{ ingredients[i] }}</td>
+                          </tr>
+                          {% endfor %}                         
+                        </tbody>
+                      </table>  
                   </small></p>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src={{recepie['meals'][0]['strYoutube']}} allowfullscreen></iframe>
+      <div class="container">
+        <p class="card-text">
+        {% for i in instruction %}
+        {{ i }} <br><br>
+        {% endfor %}
+        </p>
+      </div>  
+
+      <div class="container">
+        <iframe class="container" src={{recepie['meals'][0]['strYoutube']}} allowfullscreen></iframe>
         {{recepie['meals'][0]['strYoutube']}}
       </div>
 </body>
