--- a/templates/ucategory.html
+++ b/templates/ucategory.html
@@ -14,7 +14,7 @@
     <div class="container-fluid"> 
       <div class="row align-items-center p-3 ">
     
-      <h2>{{ category }}</h2>
+      <h2>Available meals</h2>
       
       <div class="row">
         {% for i in recepies['meals'] %}
