--- a/templates/recepie.html
+++ b/templates/recepie.html
@@ -64,9 +64,12 @@
         </p>
       </div>  
 
-      <div class="container">
-        <iframe class="container" src={{recepie['meals'][0]['strYoutube']}} allowfullscreen></iframe>
-        {{recepie['meals'][0]['strYoutube']}}
+      <div class="container">        
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src={{yt_link}} allowfullscreen></iframe>
+        </div>
+
+
       </div>
 </body>
 </html>
