--- a/templates/recepie2.html
+++ b/templates/recepie2.html
@@ -1,7 +1,7 @@
 <!-- strona testowa do extends html--> 
 
-{% extends '/templates/base.html' %}
-{% head %}Index{% endblock %}
+{% extends 'base.html' %}
+{% block title %}Index{% endblock %}
 {% block head %}
     
     <style type="text/css">
