--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+   
+    <link rel="stylesheet" href="/static/style.css">
     <title>COOKBOOK</title>
     
 </head>
 <body>
+  
     <div id="content">
         <div class="container">
             <div class="row align-items-start">
@@ -20,16 +22,21 @@
                 <h1>
                   COOKBOOK from love to cooking
                 </h1>
-                <a href="recepie2.html">recepie2</a>
               </div>
         
             </div>
           </div>  
     </div>
+    {% block body %}
+    {% endblock %}
+
+    
+    <br>
     <div id="footer">
         
         &copy; Copyright 2021 by Kitkemy</a>.
         
     </div>
+  
 </body>
 </html>
