--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,30 +1,9 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
+{% block title %}Index{% endblock %}
+{% block head %}
+{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/style.css">
-    <title>COOKBOOK</title>
-
-    
-  </head>
-  <body>
-    <div class="container">
-      <div class="row align-items-start">
-        <div class="p-3 border bg-light">
-          <h1>
-            COOKBOOK from love to cooking
-          </h1>
-        </div>
-  
-      </div>
-    </div>  
-
-
+{% block body %}
   <div class="container">
     <div class="row align-items-center">
       
@@ -64,7 +43,7 @@
               Tell kitty what's inside your fridge and I'll tell you what to do with it 
             </p>
 
-            <form action="/ingredient/{{ingredient}}" method="POST">
+            <form action="/ingredient" method="GET">
               <div class="mb-3">
                 <label class="form-label">Specify the ingredient</label>
                 <input name="ingredient">
@@ -83,5 +62,4 @@
     </div>
   </div>
  
-  </body>
-</html>
+{% endblock %}
