--- a/templates/recepie.html
+++ b/templates/recepie.html
@@ -1,16 +1,9 @@
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
+{% block title %}Index{% endblock %}
+{% block head %}
+{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
-    <link rel="stylesheet" href="/static/style.css">
-    <title>COOKBOOK</title>
-  </head>
-  <body>
+{% block body %}
       <div class="card mb-3" >
         <div class="row g-0">
           <div class="col-md-4">
@@ -71,5 +64,4 @@
 
 
       </div>
-</body>
-</html>
+{% endblock %}
