--- a/templates/ucategory.html
+++ b/templates/ucategory.html
@@ -1,16 +1,9 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
+{% block title %}Index{% endblock %}
+{% block head %}
+{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/style.css">
-    <title>COOKBOOK</title> 
-  </head>
-  <body>
+{% block body %}
     <div class="container-fluid"> 
       <div class="row align-items-center p-3 ">
     
@@ -31,6 +24,4 @@
       </div>
       </div>
     </div>
-  </body>
-
-        
+{% endblock %}       
